Add tests of parentheses-for-union-queries for PostgreSQL too

--- a/slick-testkit/src/main/resources/testkit-reference.conf
+++ b/slick-testkit/src/main/resources/testkit-reference.conf
@@ -104,6 +104,9 @@ postgres {
     DROP TABLESPACE IF EXISTS slick_test
   ]
   driver = org.postgresql.Driver
+  testClasses = ${testkit.testClasses} [
+    ${testkit.testPackage}.UnionAdditionalTest
+  ]
 }
 
 mysql {
@@ -115,7 +118,7 @@ mysql {
   drop = DROP DATABASE IF EXISTS ${testDB}
   driver = com.mysql.jdbc.Driver
   testClasses = ${testkit.testClasses} [
-    ${testkit.testPackage}.MySQLExtraTests
+    ${testkit.testPackage}.UnionAdditionalTest
   ]
 }
 
