Add null password support to DatabaseUrlDataSource

--- a/common-test-resources/application.conf
+++ b/common-test-resources/application.conf
@@ -57,6 +57,42 @@ databaseUrl {
   }
 }
 
+// HikariCP with DATABASE_URL parsing, no password
+databaseUrlNoPassword {
+  dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+  properties = {
+    driver = "slick.test.jdbc.MockDriver"
+    url = "postgres://user@host/dbname"
+    properties = {
+      foo = bar
+    }
+  }
+}
+
+// HikariCP with DATABASE_URL parsing, MySQL
+databaseUrlMySQL {
+  dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+  properties = {
+    driver = "slick.test.jdbc.MockDriver"
+    url = "mysql://user:pass@host/dbname"
+    properties = {
+      foo = bar
+    }
+  }
+}
+
+// HikariCP with DATABASE_URL parsing, MySQL and no password
+databaseUrlMySQLNoPassword {
+  dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+  properties = {
+    driver = "slick.test.jdbc.MockDriver"
+    url = "mysql://user@host/dbname"
+    properties = {
+      foo = bar
+    }
+  }
+}
+
 // Test alternative dsn for postgres
 altDatabaseUrl {
   dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
