--- a/doc/code/application.conf
+++ b/doc/code/application.conf
@@ -7,6 +7,21 @@ h2mem1 = {
 }
 //#h2mem1
 
+//#postgres
+mydb = {
+  connectionPool = "HikariCP" //use HikariCP for our connection pool
+  dataSourceClass = "org.postgresql.ds.PGSimpleDataSource" //Simple datasource with no connection pooling. The connection pool has already been specified with HikariCP.
+  properties = {
+    serverName = "localhost"
+    portNumber = "5432"
+    databaseName = "mydb"
+    user = "postgres"
+    password = "postgres"
+  }
+  numThreads = 10
+}
+//#postgres
+
 //#mydb
 mydb = {
   dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
