- Added MySQLQualifiedExtraTest to testkit-reference.conf - Removed duplicate drop in ForeignKeyTest

--- a/slick-testkit/src/main/resources/testkit-reference.conf
+++ b/slick-testkit/src/main/resources/testkit-reference.conf
@@ -25,6 +25,7 @@ testkit {
     ${testPackage}.RelationalTypeTest
     ${testPackage}.JdbcTypeTest
     ${testPackage}.ForeignKeyTest
+    ${testPackage}.MySQLQualifiedExtraTests
     ${testPackage}.InsertTest
     ${testPackage}.JoinTest
     ${testPackage}.MainTest
