- Refactored ForeignKeyTest for qualified & unqualified variants

--- a/slick-testkit/src/main/resources/testkit-reference.conf
+++ b/slick-testkit/src/main/resources/testkit-reference.conf
@@ -24,8 +24,8 @@ testkit {
     ${testPackage}.CountTest
     ${testPackage}.RelationalTypeTest
     ${testPackage}.JdbcTypeTest
-    ${testPackage}.ForeignKeyTest
-    ${testPackage}.MySQLQualifiedExtraTests
+    ${testPackage}.QualifiedForeignKeyTest
+    ${testPackage}.UnqualifiedForeignKeyTest
     ${testPackage}.InsertTest
     ${testPackage}.JoinTest
     ${testPackage}.MainTest
