Added simple example config for MySQL

--- a/doc/code/application.conf
+++ b/doc/code/application.conf
@@ -22,6 +22,16 @@ mydb = {
 }
 //#postgres
 
+//#mysql
+mydb = {
+  driver = "com.mysql.cj.jdbc.Driver",
+  url = "jdbc:mysql://127.0.0.1:3306/mydb?serverTimezone=UTC",
+  user = "user",
+  password = "pass",
+  connectionPool = disabled
+}
+//#mysql
+
 //#tsql
 tsql {
   profile = "slick.jdbc.H2Profile$"
