add failing test

--- a/slick-testkit/src/main/resources/testkit-reference.conf
+++ b/slick-testkit/src/main/resources/testkit-reference.conf
@@ -35,6 +35,7 @@ testkit {
     ${testPackage}.RelationalMiscTest
     ${testPackage}.JdbcMiscTest
     ${testPackage}.MutateTest
+    ${testPackage}.NestedFilterTest
     ${testPackage}.NestingTest
     ${testPackage}.NewQuerySemanticsTest
     ${testPackage}.PagingTest
