adds RewriteBooleanTest to testkit-reference.conf

--- a/slick-testkit/src/main/resources/testkit-reference.conf
+++ b/slick-testkit/src/main/resources/testkit-reference.conf
@@ -48,6 +48,7 @@ testkit {
     ${testPackage}.UnionTest
     ${testPackage}.ForUpdateTest
     ${testPackage}.ForceInsertQueryTest
+    ${testPackage}.RewriteBooleanTest
   ]
 }
 
