Updated MySQL connector to 8.0.16

--- a/slick-testkit/src/main/resources/testkit-reference.conf
+++ b/slick-testkit/src/main/resources/testkit-reference.conf
@@ -117,10 +117,15 @@ mysql {
   adminDB = mysql
   create = CREATE DATABASE ${testDB}
   drop = DROP DATABASE IF EXISTS ${testDB}
-  driver = com.mysql.jdbc.Driver
+  driver = com.mysql.cj.jdbc.Driver
   testClasses = ${testkit.testClasses} [
     ${testkit.testPackage}.UnionAdditionalTest
   ]
+  // If the mysql serverTimezone is not equal to the timezone of the server then mysql jdbc driver will have date/time conversion issues
+  serverTimezone = "Etc/UTC"
+  urlSuffix = "?serverTimezone="${serverTimezone}
+  testConn.url = ${baseURL}${testDB}${urlSuffix}
+  adminConn.url = ${baseURL}${adminDB}${urlSuffix}
 }
 
 oracle {
