--- a/test-dbs/testkit.travis.conf
+++ b/test-dbs/testkit.travis.conf
@@ -11,6 +11,9 @@ mysql {
   enabled = true
   baseURL = "jdbc:mysql://127.0.0.1/"
   user = root
+  // If the mysql serverTimezone is not equal to the timezone of the server then mysql jdbc driver will have date/time conversion issues
+  // this serverTimezone must be alligned with the timezone in .travis.yml
+  serverTimezone = "Asia/Kamchatka"
 }
 
 postgres {
