--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,10 @@ addons:
     - mysql-server-5.6
     - mysql-client-core-5.6
     - mysql-client-5.6
+scala:
+  - 2.11.12
+  - 2.12.8
+  - 2.13.0-RC2
 script:
 - admin/build.sh
 cache:
