In oracle profile allow nullable fake boolean to play a role of condition when suplied with default value through getOrElse.

--- a/slick-testkit/src/main/resources/testkit-reference.conf
+++ b/slick-testkit/src/main/resources/testkit-reference.conf
@@ -145,6 +145,7 @@ oracle {
   ]
   testClasses = ${testkit.testClasses} [
     ${testkit.testPackage}.OracleExtraTests
+    ${testkit.testPackage}.OptionBooleanTest
   ]
 }
 
