Run OptionBooleanTest.testFilterWithOption test against all databases.

--- a/slick-testkit/src/main/resources/testkit-reference.conf
+++ b/slick-testkit/src/main/resources/testkit-reference.conf
@@ -49,6 +49,7 @@ testkit {
     ${testPackage}.ForUpdateTest
     ${testPackage}.ForceInsertQueryTest
     ${testPackage}.RewriteBooleanTest
+    ${testPackage}.OptionBooleanTest
   ]
 }
 
