--- a/samples/slick-plainsql/src/main/resources/application.conf
+++ b/samples/slick-plainsql/src/main/resources/application.conf
@@ -10,6 +10,6 @@ tsql {
   db {
     connectionPool = disabled
     driver = "org.h2.Driver"
-    url = "jdbc:h2:mem:tsql1;INIT=runscript from 'src/main/resources/create-schema.sql'"
+    url = "jdbc:h2:mem:tsql1;INIT=runscript from 'classpath:create-schema.sql'"
   }
 }
