fix failing to start tests on SQL Server 2017

--- a/test-dbs/testkit.appveyor.conf
+++ b/test-dbs/testkit.appveyor.conf
@@ -188,7 +188,7 @@ sqlserver2017-sqljdbc {
 
     ]
   drop = [
-    use ${testDB}
+    use ${admindb}
   ]
   driver = com.microsoft.sqlserver.jdbc.SQLServerDriver
 }
