--- a/circle.yml
+++ b/circle.yml
@@ -22,4 +22,15 @@ dependencies:
 
 test:
   override:
-    - sbt +testAll
+    - sbt +testAll "++2.11.12 ;updateSampleHelloSlick ;root/testSample1"
+          "++2.12.12 ;updateSampleHelloSlick ;root/testSample1"
+          "++2.13.4  ;updateSampleHelloSlick ;root/testSample1"
+          "++2.11.12 ;updateSampleSlickPlainsql ;root/testSample2"
+          "++2.12.12 ;updateSampleSlickPlainsql ;root/testSample2"
+          "++2.13.4  ;updateSampleSlickPlainsql ;root/testSample2"
+          "++2.11.12 ;updateSampleSlickMultidb ;root/testSample3"
+          "++2.12.12 ;updateSampleSlickMultidb ;root/testSample3"
+          "++2.13.4  ;updateSampleSlickMultidb ;root/testSample3"
+          "++2.11.12 ;updateSampleSlickTestkitExample ;root/testSample4"
+          "++2.12.12 ;updateSampleSlickTestkitExample ;root/testSample4"
+          "++2.13.4  ;updateSampleSlickTestkitExample ;root/testSample4"
