--- a/circle.yml
+++ b/circle.yml
@@ -22,15 +22,15 @@ dependencies:
 
 test:
   override:
-    - sbt +testAll "++2.11.12 ;updateSampleHelloSlick ;root/testSample1"
-          "++2.12.12 ;updateSampleHelloSlick ;root/testSample1"
-          "++2.13.4  ;updateSampleHelloSlick ;root/testSample1"
-          "++2.11.12 ;updateSampleSlickPlainsql ;root/testSample2"
-          "++2.12.12 ;updateSampleSlickPlainsql ;root/testSample2"
-          "++2.13.4  ;updateSampleSlickPlainsql ;root/testSample2"
-          "++2.11.12 ;updateSampleSlickMultidb ;root/testSample3"
-          "++2.12.12 ;updateSampleSlickMultidb ;root/testSample3"
-          "++2.13.4  ;updateSampleSlickMultidb ;root/testSample3"
-          "++2.11.12 ;updateSampleSlickTestkitExample ;root/testSample4"
-          "++2.12.12 ;updateSampleSlickTestkitExample ;root/testSample4"
-          "++2.13.4  ;updateSampleSlickTestkitExample ;root/testSample4"
+    - sbt +testAll "++2.11.12 ;updateSampleHelloSlick ;root/testSample1 project root"
+          "++2.12.12 ;updateSampleHelloSlick ;root/testSample1 project root"
+          "++2.13.4  ;updateSampleHelloSlick ;root/testSample1 project root"
+          "++2.11.12 ;updateSampleSlickPlainsql ;root/testSample2 project root"
+          "++2.12.12 ;updateSampleSlickPlainsql ;root/testSample2 project root"
+          "++2.13.4  ;updateSampleSlickPlainsql ;root/testSample2 project root"
+          "++2.11.12 ;updateSampleSlickMultidb ;root/testSample3 project root"
+          "++2.12.12 ;updateSampleSlickMultidb ;root/testSample3 project root"
+          "++2.13.4  ;updateSampleSlickMultidb ;root/testSample3 project root"
+          "++2.11.12 ;updateSampleSlickTestkitExample ;root/testSample4 project root"
+          "++2.12.12 ;updateSampleSlickTestkitExample ;root/testSample4 project root"
+          "++2.13.4  ;updateSampleSlickTestkitExample ;root/testSample4 project root"
