initial fix test for getting started repo links with the externalLinks

--- a/doc/ornate.conf
+++ b/doc/ornate.conf
@@ -91,8 +91,12 @@ extension.externalLinks {
     uri = "https://issues.scala-lang.org/browse/SI-[all]"
     text = "SI-[all]"
   }
-  samplezip.uri = "https://example.lightbend.com/v1/download/[all]-"${shortVersion}
-  samplerepo.uri = "https://github.com/slick/slick/tree/"${shortVersion}"/samples/[all]"
+  sampleCodeZip{
+    uri = "https://example.lightbend.com/v1/download/[all]-"${tag}
+  }
+  sampleCodeRepo{
+    uri = "https://github.com/slick/slick/tree/"${tag}"/samples/[all]"
+  }
 }
 
 extension.highlightjs {
