--- a/.github/workflows/check-bin-compat.yml
+++ b/.github/workflows/check-bin-compat.yml
@@ -129,7 +129,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - run: git checkout ${{ matrix.hash }}
+      with:
+        ref: ${{ matrix.hash }}
         
     - name: Set up JDK 11
       uses: actions/setup-java@v2
