--- a/.github/workflows/check-bin-compat.yml
+++ b/.github/workflows/check-bin-compat.yml
@@ -142,20 +142,18 @@ jobs:
       run: >
         sbt
           'project slick'
-          '++ 2.12.13'
           'set mimaPreviousArtifacts := Set("3.3.0", "3.3.1", "3.3.2", "3.3.3").map { v: String =>
             "com.typesafe.slick" % ("slick_2.12") % v
            }'
           'set mimaCheckDirection := "both"'
-          slick/mimaReportBinaryIssues
+          '++2.12.13 slick/mimaReportBinaryIssues'
 
     - name: Check 2.13
       run: >
         sbt
           'project slick'
-          '++ 2.13.5'
           'set mimaPreviousArtifacts := Set("3.3.1", "3.3.2", "3.3.3").map { v: String =>
             "com.typesafe.slick" % ("slick_2.13") % v
            }'
           'set mimaCheckDirection := "both"'
-          slick/mimaReportBinaryIssues
+          '++2.13.5 slick/mimaReportBinaryIssues'
