fix failing to start tests on SQL Server 2017
(cherry picked from commit 84b563e7157629b877820a9909e39c5a24b75ff7)

--- a/test-dbs/testkit-appveyor.conf
+++ b/test-dbs/testkit-appveyor.conf
@@ -191,7 +191,7 @@ sqlserver2017-sqljdbc {
 
     ]
   drop = [
-    use ${testDB}
+    use ${admindb}
   ]
   driverJar = "file:./sqljdbc42.jar"
   driver = com.microsoft.sqlserver.jdbc.SQLServerDriver
