drop setup-scala, use setup-java
the immediate motivation is that `java-version: 17-ea` didn't work
with setup-scala

but also, setup-scala installs a nonstandard sbt launcher
(sbt-extras), I think it's better to use the official one

I also just generally think it's better to have fewer moving parts. to
my knowledge, setup-scala isn't giving us anything we are actually
benefiting from in this repo, while making it more difficult to
understand what is happening

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,9 +65,10 @@ jobs:
     - name: Start MySQL
       run: docker run -d -e MYSQL_ALLOW_EMPTY_PASSWORD=yes -p 3306:3306 mysql --disable-log-bin
 
-    - name: Setup Java and Scala
-      uses: olafurpg/setup-scala@v10
+    - name: Set up JDK
+      uses: actions/setup-java@v2
       with:
+        distribution: adopt
         java-version: ${{ matrix.java }}
 
     - if: ${{ startsWith('refs/tags/', github.ref) }}
