--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
         ports:
         - 1401:1433
       db2:
-        image: ibmcom/db2:latest
+        image: ibmcom/db2:11.5.5.1
         ports:
         - 50000:50000
         env:
