GitHub Actions: replace JDK 16 with JDK 17 (and remove setup-scala) (#2263)
* GitHub Actions: replace JDK 16 with JDK 17

* drop setup-scala, use setup-java

the immediate motivation is that `java-version: 17-ea` didn't work
with setup-scala

but also, setup-scala installs a nonstandard sbt launcher
(sbt-extras), I think it's better to use the official one

I also just generally think it's better to have fewer moving parts. to
my knowledge, setup-scala isn't giving us anything we are actually
benefiting from in this repo, while making it more difficult to
understand what is happening

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,11 +13,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [1.8.0, 1.11.0, 1.16.0]
+        java: [8, 11, 17-ea]
         scala: [2.12.14, 2.13.6]
-        exclude:
-        - java: 1.16.0
-          scala: 2.12.3
 
     services:
       postgres:
@@ -68,9 +65,10 @@ jobs:
     - name: Start MySQL
       run: docker run -d -e MYSQL_ALLOW_EMPTY_PASSWORD=yes -p 3306:3306 mysql --disable-log-bin
 
-    - name: Setup Java and Scala
-      uses: olafurpg/setup-scala@v10
+    - name: Set up JDK
+      uses: actions/setup-java@v2
       with:
+        distribution: adopt
         java-version: ${{ matrix.java }}
 
     - if: ${{ startsWith('refs/tags/', github.ref) }}
