fix url. `slick.typesafe.com` => `scala-slick.org`

--- a/doc/ornate.conf
+++ b/doc/ornate.conf
@@ -46,7 +46,7 @@ extension.globalRefs.refs {
   "Reactive Streams": "http://www.reactive-streams.org/"
   "JPA": "http://en.wikipedia.org/wiki/Java_Persistence_API"
   "Reactive Manifesto": "http://www.reactivemanifesto.org/"
-  "Slick Manuals": "http://slick.typesafe.com/docs/"
+  "Slick Manuals": "https://scala-slick.org/docs/"
   "Scala Futures": "http://docs.scala-lang.org/overviews/core/futures.html"
   "PostgreSQL": "http://www.postgresql.org/"
   "MySQL": "http://www.mysql.com/"
