--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,6 +65,8 @@ jobs:
     - name: Start MySQL
       run: docker run -d -e MYSQL_ALLOW_EMPTY_PASSWORD=yes -p 3306:3306 mysql --disable-log-bin
 
+    - uses: ts-graphviz/setup-graphviz@v1
+
     - name: Set up JDK
       uses: actions/setup-java@v2
       with:
