fix deploy_docs job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,6 +89,7 @@ jobs:
   deploy_docs:
     name: Deploy Docs
     needs: [build]
+    if: ${{ !github.event.repository.fork && github.ref == 'refs/heads/main' && github.event_name == 'push' }}
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
