--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,14 @@ on:
    tags: [v*]
 
 jobs:
-  build:
+  test-deploy-key:
+    steps:
+     - run: |
+         echo "${{ secrets.PUBLISH_DOCS_KEY }}" > deploy-key
+         chmod 600 deploy-key
+         ssh -vT -i $(pwd)/deploy-key git@github.com
+
+build:
     name: Build and Test
     runs-on: ubuntu-latest
 
@@ -55,11 +62,6 @@ jobs:
           --privileged
 
     steps:
-    - run: |
-        echo "${{ secrets.PUBLISH_DOCS_KEY }}" > deploy-key
-        chmod 600 deploy-key
-        ssh -vT -i $(pwd)/deploy-key git@github.com
-
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
