--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,10 +79,7 @@ jobs:
           -Dslick.testkit-config=test-dbs/testkit.github-actions.conf \
           ++${{ matrix.scala }} \
           coverage testAll coverageReport \
-          root/testSampleHelloSlick \
-          root/testSamplePlainSql \
-          root/testSampleMultiDb \
-          root/testSampleTestkit \
+          testAllSamples
       env:
         TZ: Asia/Kamchatka
 
