--- a/test-dbs/testkit.github.conf
+++ b/test-dbs/testkit.github.conf
@@ -1,9 +1,9 @@
-# Test database configuration for Travis CI build
+# Test database configuration for Github-Actions CI build
 # ....
 # The Oracle profile config needs the non-free jdbc driver placed at file:./ojdbc7-12.1.0.2.jar
 # The DB2 profile config needs the non-free jdbc driver placed at file:./db2jcc4.jar
 testkit {
-  # Set this high as travis agents are stressed and better to succeed slowly sometimes than fail intermittently
+  # Set this high as github agents are stressed and better to succeed slowly sometimes than fail intermittently
   asyncTimeout = 10 minutes
 }
 
@@ -12,7 +12,7 @@ mysql {
   baseURL = "jdbc:mysql://127.0.0.1/"
   user = root
   // If the mysql serverTimezone is not equal to the timezone of the server then mysql jdbc driver will have date/time conversion issues
-  // this serverTimezone must be alligned with the timezone in .travis.yml
+  // this serverTimezone must be aligned with the timezone in .github/ci.yml
   serverTimezone = "Asia/Kamchatka"
 }
 
@@ -20,6 +20,7 @@ postgres {
   enabled = true
   create = CREATE DATABASE ${testDB} "TEMPLATE = template0"
   drop = DROP DATABASE IF EXISTS ${testDB}
+  password = postgres
 }
 
 db2 {
