--- a/samples/slick-multidb/src/main/resources/application.conf
+++ b/samples/slick-multidb/src/main/resources/application.conf
@@ -12,7 +12,7 @@ sqlite = {
   keepAliveConnection = true
 }
 
-#--doc-h2_db
+#doc-h2_db
 h2_dc {
   profile = "slick.jdbc.H2Profile$"
   db {
@@ -22,4 +22,4 @@ h2_dc {
     keepAliveConnection = true
   }
 }
-#--doc-h2_db
+#doc-h2_db
