--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "suegithub"]
-	path = travis/ZNonPublicDeps
+	path = appveyor/ZNonPublicDeps
 	url = https://github.com/smootoo/ZNonPublicDeps.git
