--- a/.github/workflows/pr-compat-report-post-comment.yml
+++ b/.github/workflows/pr-compat-report-post-comment.yml
@@ -15,7 +15,7 @@ jobs:
 
     steps:
     - name: 'Download artifact'
-      uses: actions/github-script@v3.1.0
+      uses: actions/github-script@v6
       with:
         script: |
           var artifacts = await github.rest.actions.listWorkflowRunArtifacts({
@@ -26,7 +26,7 @@ jobs:
           var matchArtifact = artifacts.data.artifacts.filter((artifact) => {
             return artifact.name === "compat-report"
           })[0];
-          var download = await github.actions.downloadArtifact({
+          var download = await github.rest.actions.downloadArtifact({
             owner: context.repo.owner,
             repo: context.repo.repo,
             artifact_id: matchArtifact.id,
@@ -38,13 +38,13 @@ jobs:
     - run: unzip compat-report.zip
 
     - name: 'Comment on PR'
-      uses: actions/github-script@v3
+      uses: actions/github-script@v6
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
           var fs = require('fs');
           var issue_number = Number(fs.readFileSync('./NR.txt'));
-          await github.issues.createComment({
+          await github.rest.issues.createComment({
             owner: context.repo.owner,
             repo: context.repo.repo,
             issue_number: issue_number,
