--- a/.github/workflows/pr-compat-report-generate.yml
+++ b/.github/workflows/pr-compat-report-generate.yml
@@ -46,9 +46,13 @@ jobs:
     - name: Show report saved in ${{ steps.createReport.outputs.reportFile }}
       run: cat ${{ steps.createReport.outputs.reportFile }}
 
-    - name: Post as comment to PR
+    - name: Prepare artifact contents
       run: |
-        echo Adding to PR...
-        gh pr comment ${{ github.event.pull_request.number }} -F ${{ steps.createReport.outputs.reportFile }}
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        mkdir -p ./compat-report
+        cp ${{ steps.createReport.outputs.reportFile }} ./compat-report/compat-report.md
+        echo ${{ github.event.number }} > ./compat-report/NR.txt
+
+    - uses: actions/upload-artifact@v2
+      with:
+        name: compat-report
+        path: compat-report/
