fixup! fixup! fixup! Post actual compat report PR comment in workflow_run workflow

--- a/.github/workflows/pr-compat-report-post-comment.yml
+++ b/.github/workflows/pr-compat-report-post-comment.yml
@@ -39,6 +39,6 @@ jobs:
 
     - name: Post as comment to PR
       run: |
-        gh pr comment $(cat ./NR.txt) -F ./compat-report.md
+        gh pr comment $(cat ./NR.txt) -F ./compat-report.md -R slick/slick
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
