--- a/.github/workflows/pr-compat-report-generate.yml
+++ b/.github/workflows/pr-compat-report-generate.yml
@@ -34,6 +34,8 @@ jobs:
         fetch-depth: 0
         clean: false
 
+    - run: sbt clean compile
+
     - name: Generate compatibility changes report
       id: createReport
       run: |
