Fixing drop sequence for sqljdbc drivers

--- a/test-dbs/testkit.appveyor.conf
+++ b/test-dbs/testkit.appveyor.conf
@@ -115,7 +115,7 @@ sqlserver-sqljdbc {
 
     ]
   drop = [
-    use ${adminDB}
+    print('Skipped intentionally')
   ]
   driver = com.microsoft.sqlserver.jdbc.SQLServerDriver
 }
@@ -139,7 +139,7 @@ sqlserver2012-sqljdbc {
 
     ]
   drop = [
-    use ${testDB}
+    print('Skipped intentionally')
   ]
   driver = com.microsoft.sqlserver.jdbc.SQLServerDriver
 }
@@ -163,7 +163,7 @@ sqlserver2014-sqljdbc {
 
     ]
   drop = [
-    use ${testDB}
+    print('Skipped intentionally')
   ]
   driver = com.microsoft.sqlserver.jdbc.SQLServerDriver
 }
@@ -188,7 +188,7 @@ sqlserver2017-sqljdbc {
 
     ]
   drop = [
-    use ${admindb}
+    print('Skipped intentionally')
   ]
   driver = com.microsoft.sqlserver.jdbc.SQLServerDriver
 }
