--- a/.mergify.yml
+++ b/.mergify.yml
@@ -11,7 +11,9 @@ pull_request_rules:
           - build
   - name: Automatic merge on approval
     conditions:
-      - "check-success=typesafe-cla-validator"
+      - or:
+          - "check-success=typesafe-cla-validator"
+          - "author=renovate"
       - "check-success=Build and Test (8, 2.12.15)"
       - "check-success=Build and Test (8, 2.13.8)"
       - "check-success=Build and Test (11, 2.12.15)"
