--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,6 +72,7 @@ jobs:
       with:
         distribution: adopt
         java-version: ${{ matrix.java }}
+        cache: sbt
 
     - name: Build and test
       run: |
@@ -99,6 +100,7 @@ jobs:
       with:
         distribution: adopt
         java-version: 11
+        cache: sbt
 
     - name: Create deploy key
       run: |
@@ -131,6 +133,7 @@ jobs:
       with:
         distribution: adopt
         java-version: 8
+        cache: sbt
 
     - name: Publish artifacts to Maven Central
       env:
