--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
  pull_request:
    branches: ['**']
  push:
-   branches: ['**']
+   branches: ['main']
    tags: [v*]
 
 jobs:
@@ -13,7 +13,6 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
-      fail-fast: false
       matrix:
         java: [8, 11, 17]
         scala: [2.12.15, 2.13.8]
