--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        java: [8, 11, 17]
+        java: [8, 17]
         scala: [2.12.15, 2.13.8]
 
     services:
