.github/workflows: use concurrency groups to cancel obsolete runs

--- a/.github/workflows/check-scaladoc-links.yml
+++ b/.github/workflows/check-scaladoc-links.yml
@@ -7,6 +7,10 @@ on:
    branches: ['main']
    tags: ['**']
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   test:
     runs-on: ubuntu-latest
