--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,7 +1,10 @@
 queue_rules:
   - name: default
-    conditions: []
+    conditions:
+      - "-draft"
+
 pull_request_rules:
+
   - name: Label Scala Steward and Renovate PRs with 'build'
     conditions:
       - or:
@@ -11,6 +14,7 @@ pull_request_rules:
       label:
         add:
           - build
+
   - name: Automatic merge on approval
     conditions:
       - or:
@@ -21,7 +25,6 @@ pull_request_rules:
       - "check-success=Build and Test (17, 2.12.15)"
       - "check-success=Build and Test (17, 2.13.8)"
       - "#changes-requested-reviews-by=0"
-      - "-draft"
       - or:
           - "#approved-reviews-by>=1"
           - "author=scala-steward"
